<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubmissionActivity"
    android:background="@drawable/background_activity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:theme="@style/ToolbarColoredBackArrow">


            </android.support.v7.widget.Toolbar>


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="202dp"
                android:layout_height="43dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/gad_logo_edit"
                app:layout_constraintBottom_toBottomOf="@+id/toolbar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/toolbar"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </android.support.design.widget.AppBarLayout>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/submission_title"
        android:textColor="@color/orangeVariant"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout3" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/png_stroke"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="152dp"
        android:layout_height="44dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/text_fields"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/first_name_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="152dp"
        android:layout_height="44dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:background="@drawable/text_fields"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/last_name_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <EditText
        android:id="@+id/email"
        android:layout_width="336dp"
        android:layout_height="44dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/text_fields"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"
        app:layout_constraintEnd_toEndOf="@+id/link"
        app:layout_constraintStart_toStartOf="@+id/link"
        app:layout_constraintTop_toBottomOf="@+id/last_name" />

    <EditText
        android:id="@+id/link"
        android:layout_width="336dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/text_fields"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/project_link_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <Button
        android:id="@+id/project_sub"
        android:layout_width="140dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/submit_button"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:backgroundTint="@color/orangeVariant"
        android:background="@drawable/round_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/link" />
</android.support.constraint.ConstraintLayout>